Fix local names.

--- a/idris-py.cabal
+++ b/idris-py.cabal
@@ -22,6 +22,7 @@ Executable idris-py
                 , mtl
                 , transformers
                 , pretty
+                , text
 
   other-modules: IRTS.CodegenPython
 
