--- a/idris-python.cabal
+++ b/idris-python.cabal
@@ -7,7 +7,7 @@ Maintainer:	Matus Tejiscak <ziman@functor.sk>
 Build-Type:	Simple
 Cabal-Version:  >= 1.8
 
-Executable idris-python
+Executable idris-codegen-python
   Main-is:        Main.hs
   hs-source-dirs: src
 
