--- a/idris-python.cabal
+++ b/idris-python.cabal
@@ -1,17 +1,19 @@
-Name:           idris-python
-Version:        0.0.0.1
-License:        BSD3
-License-file:   LICENSE
-Author:         Matus Tejiscak
-Maintainer:	Matus Tejiscak <ziman@functor.sk>
-Build-Type:	Simple
-Cabal-Version:  >= 1.8
+name:                idris-python
+Version:             0.0.0.1
+synopsis:            Initial project template from stack
+description:         Please see README.md
+license:             BSD3
+license-file:        LICENSE
+Author:              Matus Tejiscak
+Maintainer:	     Matus Tejiscak <ziman@functor.sk>
+build-type:          Simple
+cabal-version:       >=1.10
 
-Executable idris-codegen-python
-  Main-is:        Main.hs
+
+executable idris-codegen-python
+  main-is:        Main.hs
   hs-source-dirs: src
-
-  Build-depends:  idris
+  build-depends:  idris
                 , base
                 , containers
                 , directory
@@ -21,7 +23,7 @@ Executable idris-codegen-python
                 , transformers
                 , text
 
-  other-modules: IRTS.CodegenPython
+  other-modules:    IRTS.CodegenPython
 
   if os(linux)
      cpp-options:   -DLINUX
@@ -39,7 +41,7 @@ Executable idris-codegen-python
      cpp-options:   -DWINDOWS
      build-depends: Win32 < 2.4
 
+
   ghc-prof-options: -auto-all -caf-all
-  ghc-options:      -threaded -rtsopts -funbox-strict-fields
-
-
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -funbox-strict-fields
+  default-language: Haskell2010
