--- a/idris-python.cabal
+++ b/idris-python.cabal
@@ -11,7 +11,7 @@ Executable idris-codegen-python
   Main-is:        Main.hs
   hs-source-dirs: src
 
-  Build-depends:  idris
+  Build-depends:  idris >= 1.1 && < 1.2
                 , base
                 , containers
                 , directory
